--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@next/font": "13.1.6",
     "@prisma/client": "^4.10.1",
     "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.10",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
+    "styled-jsx": "^5.1.2",
     "zustand": "^4.3.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.14.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
