--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
     "styled-jsx": "^5.1.2",
+    "tw-elements": "^1.0.0-beta1",
     "zustand": "^4.3.3"
   },
   "devDependencies": {
